--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div>
       <canvas id='app'></canvas>
     </div>
-    <script type="module" src="SapienzaInteractiveGraphicsCourse/final-project-zombies-attack/main.js"></script>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
